--- a/second.html
+++ b/second.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem asperiores laboriosam illum alias accusamus aperiam iste ullam maiores laborum amet doloribus, tenetur veniam inventore, excepturi at nemo explicabo minima, eveniet delectus cum voluptatem aut ipsam earum. Vero architecto, amet animi esse magni necessitatibus pariatur. Quod porro fugiat nulla libero deserunt!</p>
 </body>
 </html>
